--- a/services/package.json
+++ b/services/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn index.dev.ts"
+    "dev": "ts-node-dev --respawn index.dev.ts",
+    "db:migrate": "sequelize db:migrate",
+    "db:migrate:undo": "sequelize db:migrate:undo"
   },
   "devDependencies": {
     "module-alias": "^2.2.2",
