--- a/services/package.json
+++ b/services/package.json
@@ -9,15 +9,25 @@
     "db:migrate:undo": "sequelize db:migrate:undo"
   },
   "devDependencies": {
+    "@types/node": "^13.11.0",
     "module-alias": "^2.2.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "apollo-server": "^2.11.0",
+    "apollo-server-express": "^2.11.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mysql2": "^2.1.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0"
+  },
+  "_moduleAliases": {
+    "#root": "./src"
   }
 }
